--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-native": "0.52.0",
     "react-native-vector-icons": "^4.5.0",
     "react-native-video": "^2.0.0",
-    "react-navigation": "^1.0.0-beta.27"
+    "react-navigation": "^1.5.11"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
